web: improved template for layout and login

--- a/assets/html/layout.html
+++ b/assets/html/layout.html
@@ -12,6 +12,9 @@
             padding-top: 20px;
             padding-bottom: 20px;
         }
+        .larger {
+            font-size: 1.2em;
+        }
     </style>
 </head>
 <body>
