--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -1,14 +1,16 @@
 {{ define "content" }}
+    <h1>Login</h1>
+    <hr /><br>
     <form action="/oauth/login" method="post" class="form-horizontal">
         <div class="form-group">
-            <label for="loginInput" class="col-sm-2 control-label">Login</label>
-            <div class="col-sm-10">
+            <label for="loginInput" class="col-sm-1 control-label">Login</label>
+            <div class="col-sm-11">
                 <input type="text" class="form-control" id="loginInput" name="login" placeholder="Login" value="{{ .Login }}">
             </div>
         </div>
         <div class="form-group">
-            <label for="passwordInput" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
+            <label for="passwordInput" class="col-sm-1 control-label">Password</label>
+            <div class="col-sm-11">
                 <input type="password" class="form-control" id="passwordInput" name="password" placeholder="Password">
             </div>
         </div>
@@ -16,7 +18,7 @@
         <input type="hidden" id="request_id" name="request_id" value="{{ .RequestID }}">
 
         <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div class="col-sm-offset-1 col-sm-11">
                 <button type="submit" class="btn btn-default">Sign in</button>
             </div>
         </div>
